--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ faiss-cpu
 streamlit
 streamlit==1.32.0
 altair==5.2.0
-streamlit-authenticator
+streamlit-authenticator==0.2.3
 plotly
 matplotlib
 seaborn
